changed image name

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -24,7 +24,7 @@ spec:
           path: /app-storage
           type: Directory
       containers:
-      - image: 033407704869.dkr.ecr.us-west-2.amazonaws.com/bucketlist:v4
+      - image: 033407704869.dkr.ecr.us-west-2.amazonaws.com/bucketlist:stateless
         name: bucketlist-stateless
         resources: {}
         volumeMounts:
