changed volume mountPath

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         name: bucketlist-stateless
         resources: {}
         volumeMounts:
-        - mountPath: "/app-storage"
+        - mountPath: /app-storage
           name: bucketlist-storage
 status: {}
 
